Change navbar IDs, ,fix z-index

--- a/stylesheets/mtvillwock-stylesheet.css
+++ b/stylesheets/mtvillwock-stylesheet.css
@@ -36,7 +36,6 @@ padding-bottom: 10px;
 }
 
 p {
-text-align: left;
 white-space: normal;
 }
 /* Commenting out until need to be used
@@ -66,7 +65,7 @@ a:visited {
   border-radius: 15px;
   color: #1410ff;
   height: 100px;
-  margin-left: auto;
+  margin-left: 7%;
   margin-right: auto;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -78,10 +77,11 @@ a:visited {
   display: inline;
 }
 
-#header li a {
-  color: #FF7C1F;
-  text-decoration: none;
+li a {
+  color: #9FCA5F;
+  margin-right: 5px;
   padding: 5px;
+  text-decoration: none;
 }
 
 #social-icons {
@@ -91,7 +91,7 @@ a:visited {
   margin-right: 10px;
   margin-top: 10px;
   width: 30px;
-  z-index: -1;
+  z-index: 1;
 }
 
 /*START index.html SPECIFIC CONTENT*/
@@ -106,6 +106,10 @@ a:visited {
   position: relative;
   max-width: 70%;
   text-align: center;
+}
+
+#content-block img {
+  float: left;
 }
 
 /*END index.html SPECIFIC CONTENT*/
@@ -147,15 +151,4 @@ text-align: center;
   position: absolute;
   text-align: center;
   max-width: 85%;
-}
-
-#footer li {
-  display: inline;
-}
-
-#footer li a {
-  color: ##9FCA5F;
-  margin-right: 5px;
-  padding: 5px;
-  text-decoration: none;
 }
